--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -2,7 +2,7 @@ name: Publish to Github Packages with Gradle
 
 on:
   release:
-    types: [ created ]
+    types: [published]
 
 permissions:
   contents: read
