upgrades dokka and dokka plugin to v2

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,7 @@
 kotlin.code.style=official
 
 kotlinVersion=2.0.21
+dokkaVersion=2.0.0-Beta
 versionsVersion=0.48.0
 detektVersion=1.23.1
 
@@ -11,3 +12,6 @@ reactiveStreamsVersion=1.0.4
 kotestVersion=5.7.2
 testLoggerVersion=4.0.0
 wiremockVersion=3.2.0
+
+org.jetbrains.dokka.experimental.gradle.pluginMode=V2Enabled
+org.jetbrains.dokka.experimental.gradle.pluginMode.noWarn=true
